--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,7 @@ on:
     paths-ignore:
       - README.rst
       - "docs/*"
-  # Note: trying to exclude pull requests because it results in duplicate job
-  # on the commits belonging to pull requests.
-  # pull_request:
+  pull_request:
   schedule:
     - cron: '48 6 * * *'
 
