chore: adapt license metadata to license expression

--- a/psycopg/setup.cfg
+++ b/psycopg/setup.cfg
@@ -4,7 +4,7 @@ description = PostgreSQL database adapter for Python
 url = https://psycopg.org/psycopg3/
 author = Daniele Varrazzo
 author_email = daniele.varrazzo@gmail.com
-license = GNU Lesser General Public License v3 (LGPLv3)
+license_expression = LGPL-3.0-only
 
 # Use a versioning scheme as defined in
 # https://www.python.org/dev/peps/pep-0440/
@@ -29,7 +29,6 @@ project_urls =
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
-    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
