--- a/psycopg_c/setup.cfg
+++ b/psycopg_c/setup.cfg
@@ -4,7 +4,7 @@ description = PostgreSQL database adapter for Python -- C optimisation distribut
 url = https://psycopg.org/psycopg3/
 author = Daniele Varrazzo
 author_email = daniele.varrazzo@gmail.com
-license = GNU Lesser General Public License v3 (LGPLv3)
+license_expression = LGPL-3.0-only
 version = 3.2.11
 
 project_urls =
@@ -19,7 +19,6 @@ project_urls =
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
-    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
