--- a/psycopg/setup.cfg
+++ b/psycopg/setup.cfg
@@ -10,7 +10,7 @@ license_expression = LGPL-3.0-only
 # https://www.python.org/dev/peps/pep-0440/
 
 # STOP AND READ! if you change:
-version = 3.2.11
+version = 3.2.12.dev1
 # also change:
 # - `docs/news.rst` to declare this as the current version or an unreleased one
 # - `psycopg_c/setup.cfg`, and the extra dependencies below, to the same version.
@@ -62,9 +62,9 @@ install_requires =
 
 [options.extras_require]
 c =
-    psycopg-c == 3.2.11; implementation_name != "pypy"
+    psycopg-c == 3.2.12.dev1; implementation_name != "pypy"
 binary =
-    psycopg-binary == 3.2.11; implementation_name != "pypy"
+    psycopg-binary == 3.2.12.dev1; implementation_name != "pypy"
 pool =
     psycopg-pool
 test =
