--- a/psycopg_c/setup.cfg
+++ b/psycopg_c/setup.cfg
@@ -5,7 +5,7 @@ url = https://psycopg.org/psycopg3/
 author = Daniele Varrazzo
 author_email = daniele.varrazzo@gmail.com
 license_expression = LGPL-3.0-only
-version = 3.2.12.dev1
+version = 3.2.12
 
 project_urls =
     Homepage = https://psycopg.org/
