--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ disallow_untyped_defs = false
 disallow_untyped_calls = false
 
 [tool.codespell]
-ignore-words-list = "alot,ans,ba,fo,te,erro,varning"
+ignore-words-list = "alot,ans,ba,fo,te,erro,varning,perfor"
 skip = "build,_build,.tox,.mypy_cache,.venv,pq.c,_psycopg.c,*.html"
 
 [tool.isort]
