chore: fix license metadata
The package at this state was pushed on https://test.pypi.org/project/psycopg/3.2.13.dev1/
which shows the license expression, unlike in https://pypi.org/project/psycopg/3.2.12/

Fix #1209

--- a/psycopg_pool/setup.cfg
+++ b/psycopg_pool/setup.cfg
@@ -4,7 +4,7 @@ description = Connection Pool for Psycopg
 url = https://psycopg.org/psycopg3/
 author = Daniele Varrazzo
 author_email = daniele.varrazzo@gmail.com
-license_expression = LGPL-3.0-only
+license = LGPL-3.0-only
 
 # STOP AND READ! if you change:
 version = 3.2.8.dev1
