--- a/psycopg/setup.cfg
+++ b/psycopg/setup.cfg
@@ -4,7 +4,7 @@ description = PostgreSQL database adapter for Python
 url = https://psycopg.org/psycopg3/
 author = Daniele Varrazzo
 author_email = daniele.varrazzo@gmail.com
-license_expression = LGPL-3.0-only
+license = LGPL-3.0-only
 
 # Use a versioning scheme as defined in
 # https://www.python.org/dev/peps/pep-0440/
