--- a/psycopg_c/setup.cfg
+++ b/psycopg_c/setup.cfg
@@ -4,7 +4,7 @@ description = PostgreSQL database adapter for Python -- C optimisation distribut
 url = https://psycopg.org/psycopg3/
 author = Daniele Varrazzo
 author_email = daniele.varrazzo@gmail.com
-license_expression = LGPL-3.0-only
+license = LGPL-3.0-only
 version = 3.2.13.dev1
 
 project_urls =
