ci: only run docs workflow on the main repo
https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#example-only-run-job-for-specific-repository

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,7 @@ concurrency:
 jobs:
   docs:
     runs-on: ubuntu-latest
+    if: github.repository == 'psycopg/psycopg'
     steps:
       - name: Trigger docs build
         uses: peter-evans/repository-dispatch@v4
