--- a/psycopg_pool/setup.cfg
+++ b/psycopg_pool/setup.cfg
@@ -7,7 +7,7 @@ author_email = daniele.varrazzo@gmail.com
 license = LGPL-3.0-only
 
 # STOP AND READ! if you change:
-version = 3.2.8.dev1
+version = 3.2.8
 # also change:
 # - `docs/news_pool.rst` to declare this version current or unreleased
 
