--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -198,10 +198,12 @@ jobs:
           - {impl: python, python: "3.11"}
           - {impl: python, python: "3.12"}
           - {impl: python, python: "3.13"}
+          - {impl: python, python: "3.14"}
           - {impl: c, python: "3.10"}
           - {impl: c, python: "3.11"}
           - {impl: c, python: "3.12"}
           - {impl: c, python: "3.13"}
+          - {impl: c, python: "3.14"}
 
     env:
       PSYCOPG_IMPL: ${{ matrix.impl }}
@@ -319,10 +321,12 @@ jobs:
           - {impl: python, python: "3.11"}
           - {impl: python, python: "3.12"}
           - {impl: python, python: "3.13"}
+          - {impl: python, python: "3.14"}
           - {impl: c, python: "3.10"}
           - {impl: c, python: "3.11"}
           - {impl: c, python: "3.12"}
           - {impl: c, python: "3.13"}
+          - {impl: c, python: "3.14"}
 
     env:
       PSYCOPG_IMPL: ${{ matrix.impl }}
