chore: bump Mypy min required version to 1.19
Avoid installing Mypy as part of the tests extra: installation fails
because a binary librt is not available. As a consequence, avoid running
Mypy-based tests in test CI jobs on PyPy.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -120,7 +120,7 @@ jobs:
       - name: Exclude certain tests from pypy
         if: ${{ startsWith(matrix.python, 'pypy') }}
         run: |
-          echo "NOT_MARKERS=$NOT_MARKERS timing" >> $GITHUB_ENV
+          echo "NOT_MARKERS=$NOT_MARKERS timing mypy" >> $GITHUB_ENV
 
       - name: Configure to use the oldest dependencies
         if: ${{ matrix.ext == 'min' }}
