--- a/psycopg_c/pyproject.toml
+++ b/psycopg_c/pyproject.toml
@@ -24,7 +24,7 @@ cython-requires = ["Cython >= 3.1.1"]
 [project]
 name = "psycopg-c"
 description = "PostgreSQL database adapter for Python -- C optimisation distribution"
-version = "3.3.0"
+version = "3.3.1.dev1"
 license = "LGPL-3.0-only"
 license-files = ["LICENSE.txt"]
 classifiers = [
