Fix docs build on Python 3.13+
Python 3.13 removed the `imghdr` module from the standard library.
Sphinx 5.x still imports it, causing the docs
build to fail immediately with:

    No module named 'imghdr'

Bump the Sphinx lower bound to 7.2 (the first release that dropped the
imghdr dependency) and furo to 2024.1.29.

--- a/psycopg/pyproject.toml
+++ b/psycopg/pyproject.toml
@@ -93,8 +93,8 @@ dev = [
     "wheel >= 0.37",
 ]
 docs = [
-    "Sphinx >= 5.0",
-    "furo == 2022.6.21",
+    "Sphinx >= 7.2",
+    "furo >= 2024.1.29",
     "sphinx-autobuild >= 2021.3.14",
     "sphinx-autodoc-typehints >= 1.12",
 ]
